app-constructs/tgnnapp/jupyterhub/setup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-service
  namespace: tgnnapp 
spec:
  selector:
    app: jupyterhub
    component: singleuser-server
  ports:
    - name: driver
      protocol: TCP
      port: 2222
      targetPort: 2222
    - name: blockmanager
      protocol: TCP
      port: 7777
      targetPort: 7777
    - name: spark-driver-ui-port
      port: 4040
      protocol: TCP
      targetPort: 4040
  type: ClusterIP
