app-constructs/tgnnapp/jupyterhub/setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: tgnnapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/force-ssl-redirect: "false"
    traefik.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: jupyterhub.tgnnapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-tgnnapp-jupyterhub
            port:
              name: http
